<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Mute</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="catalog_all">All</string>
    <string name="catalog_location">Location</string>
    <string name="catalog_Wifi">Wifi</string>
    <string name="catalog_time">Time</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>

    <string-array name="navigation_items">
        <item>All</item>
        <item>Location</item>
        <item>Wifi</item>
        <item>Time</item>
        <item>Turn Off</item>
        <item>Backup</item>
        <item>Restore</item>
        <item>About</item>
    </string-array>
    <string-array name="rule_type">
        <item>Location</item>
        <item>Time Schedule</item>
        <item>Wifi Network</item>
    </string-array>

    <string-array name="transition_type">
        <item>ENTER</item>
        <item>DWELL</item>
    </string-array>

    <string-array name="rule_activated">
        <item>Disable</item>
        <item>Enable</item>
    </string-array>

    <string name="title_activity_wifi_edit">WifiEdit</string>
    <string name="hello_world">Hello world!</string>
    <string name="SSID_Label">SSID:</string>
    <string name="label_NameEdit">Name:</string>
    <string name="label_save">Save</string>
    <string name="vibrate">Vibrate</string>
    <string name="slience">Slience</string>
    <string name="ringmode">Ring mode:</string>
    <string name="sound">Sound</string>
    <string name="title_activity_time_rule">TimeRuleActivity</string>
    <string name="label_description">Description:</string>
    <string name="label_start">Start:</string>
    <string name="label_end">End:</string>
    <string name="sunday_3_abbreviation">SUN</string>
    <string name="monday_3_abbreviation">MON</string>
    <string name="tuesday_3_abbreviation">TUE</string>
    <string name="wednesday_3_abbreviation">WED</string>
    <string name="thursday_3_abbreviation">THU</string>
    <string name="friday_3_abbreviation">FRI</string>
    <string name="saturday_3_abbreviation">SAT</string>
    <string name="edit_name_hint">Name</string>
    <string name="edit_description_hint">Description</string>
    <string name="alldays">All Days</string>
    <string name="activited_label">Activited</string>
    <string name="toast_need_SSID">SSID CAN NOT BE EMPTY!</string>
    <string name="toast_need_rule_name">Rule must have a name!</string>
    <string name="title_activity_location_rule_edit">LocationRuleEditActivity</string>
    <string name="label_longitude">Longitude:</string>
    <string name="label_latitude">Latitude:</string>
    <string name="label_range">Radius:</string>
    <string name="toast_location_cannot_empty">Longitude or Latitude can not be empty.</string>
    <string name="toast_location_format_error">Longitude or Latitude is wrong format.</string>
    <string name="location_provider_disabled_title">Location Provider is disabled</string>
    <string name="location_provider_disabled_text">Touch to open Location Settings.</string>
    <string name="geo_not_available_retry_title">Geofences is not available currently.</string>
    <string name="geo_not_available_retry_text">Touch to try add Geofences again.</string>
    <string name="title_activity_locations">Locations</string>
    <string name="action_mapview">Map</string>
    <string name="action_listview">List</string>
    <string name="click_to_edit">&amp;lt;click to &lt;b>EDIT&lt;/b>&amp;gt;</string>
    <string name="click_to_add">&amp;lt;click to &lt;b>ADD&lt;/b>&amp;gt;</string>
    <string name="info_rule_activated" >Activated:&lt;b>%1s&lt;/b></string>
    <string name="info_trigger_by_enter" formatted="false">Radius: &lt;b>%1dm&lt;/b>.Trigger by &lt;b>ENTER&lt;/b></string>
    <string name="info_trigger_by_dwell" formatted="false">
        Radius: &lt;b>%1dm&lt;/b>.\nTriggered by &lt;b>DWELL&lt;/b> and loiter &lt;b>%2d&lt;/b> min</string>
    <string name="map_info_title_newplace">New Place</string>
    <string name="map_info_snippet_add">Click to Add</string>
    <string name="map_info_title_currplace">You are here</string>
    <string name="discard">Discard</string>
    <string name="loitering_hint">loitering (minute)</string>
    <string name="trigger_notification_delay_hint">Notification Delay (sec)</string>
    <string name="lable_trigger_by">Tigger by:</string>
    <string name="info_wifi_condition" formatted="false">
        Triggered when connected wifi: &lt;b>%1s&lt;/b></string>
    <string name="info_time_condition" formatted="false">from %1s to %2s on %3s.</string>
    <string name="everyday">everyday</string>
    <string name="weekdays">weekdays</string>
    <string name="weekend">weekend</string>
    <string name="noname">&lt;NO NAME></string>
    <string name="btn_text_location_setting">Location Settings</string>
    <string name="Warning">Warning</string>
    <string name="need_location_service_message">Location mute need location services ON or mode set to High accuracy or Battery saving</string>
</resources>
