<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bangz.smartmute.TimeRuleEditActivity">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TimeRuleName"
        android:hint="@string/edit_name_hint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_start"
        android:id="@+id/label_start"
        android:layout_below="@id/TimeRuleName"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/editStartTime"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="5"
        android:id="@+id/editStartTime"
        android:layout_below="@id/TimeRuleName"
        android:layout_toRightOf="@+id/label_start"
        android:layout_toEndOf="@+id/label_start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_end"
        android:id="@+id/label_end"
        android:layout_below="@+id/editStartTime"
        android:layout_alignBaseline="@+id/editEndTime"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="5"
        android:id="@+id/editEndTime"
        android:layout_below="@+id/editStartTime"
        android:layout_alignLeft="@+id/editStartTime"
         />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkAllDays"
        android:text="@string/alldays"
        android:layout_below="@+id/editEndTime"
        android:layout_alignParentLeft="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkAllDays"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_alignParentStart="true"
        android:id="@+id/weekdays">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Sunday"
            android:text="@string/sunday_3_abbreviation"
            android:textOff="@string/sunday_3_abbreviation"
            android:textOn="@string/sunday_3_abbreviation"
            android:layout_weight="1"
            android:typeface="monospace"
            />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Monday"
            android:textAllCaps="true"
            android:text="@string/monday_3_abbreviation"
            android:textOff="@string/monday_3_abbreviation"
            android:textOn="@string/monday_3_abbreviation"
            android:typeface="monospace"
            android:layout_weight="1"
            />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Tuesday"
            android:text="@string/tuesday_3_abbreviation"
            android:textOff="@string/tuesday_3_abbreviation"
            android:textOn="@string/tuesday_3_abbreviation"
            android:layout_weight="1"
            android:typeface="monospace"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Wednesday"
            android:text="@string/wednesday_3_abbreviation"
            android:textOff="@string/wednesday_3_abbreviation"
            android:textOn="@string/wednesday_3_abbreviation"
            android:layout_weight="1"
            android:typeface="monospace"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Thursday"
            android:text="@string/thursday_3_abbreviation"
            android:textOff="@string/thursday_3_abbreviation"
            android:textOn="@string/thursday_3_abbreviation"
            android:layout_weight="1"
            android:typeface="monospace"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Friday"
            android:text="@string/friday_3_abbreviation"
            android:textOff="@string/friday_3_abbreviation"
            android:textOn="@string/friday_3_abbreviation"
            android:layout_weight="1"
            android:typeface="monospace"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Saturday"
            android:text="@string/saturday_3_abbreviation"
            android:textOff="@string/saturday_3_abbreviation"
            android:textOn="@string/saturday_3_abbreviation"
            android:layout_weight="1"
            android:typeface="monospace"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textRingMode"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/weekdays"
        android:layout_marginTop="7dp"
        android:text="@string/ringmode"/>

    <!-- If have time, use custom SeekBar to replace this RadioGroup -->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ringmode"
        android:layout_below="@+id/textRingMode"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:checkedButton="@+id/vibrate"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vibrate"
            android:text="@string/vibrate"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/silence"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/slience"/>


    </RadioGroup>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activited_label"
        android:id="@+id/Activited"
        android:layout_below="@+id/ringmode"
        android:layout_alignLeft="@+id/ringmode"
        android:layout_alignStart="@+id/ringmode"
        android:checked="true" />




</RelativeLayout>
