<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Royer Wang. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_NameEdit"
        android:id="@+id/Name_Label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/RuleName"
            android:hint="@string/edit_name_hint"
            android:singleLine="true" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Activited"
            android:paddingLeft="10dp"/>

    </LinearLayout>



    <!-- If have time, use custom SeekBar to replace this RadioGroup -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textRingMode"
            android:layout_gravity="center_vertical"
            android:text="@string/ringmode"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ringmode"
            android:paddingLeft="10dp"
            android:checkedButton="@+id/vibrate"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vibrate"
                android:text="@string/vibrate"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/silence"
                android:layout_marginLeft="10dp"
                android:text="@string/slience"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelRadius"
            android:text="@string/label_range"
            android:layout_gravity="center_vertical"/>
        <SeekBar
            android:id="@+id/seekRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="300"
            android:id="@+id/txtRadius"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lable_trigger_by"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinTrans"
            android:entries="@array/transition_type"/>
    </LinearLayout>
        <EditText
            android:id="@+id/txtLoitering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/loitering_hint"
            android:singleLine="true"
            android:numeric="integer" />
        <EditText
            android:id="@+id/txtNotifyDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="number"
            android:hint="@string/trigger_notification_delay_hint"/>


</LinearLayout>
