<!--
  ~ Copyright (c) 2015 Royer Wang. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bangz.smartmute.LocationRuleEditActivity">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RuleName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/edit_name_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelLongitude"
        android:text="@string/label_longitude"
        android:layout_alignBaseline="@+id/txtLongitude"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/txtLongitude"
        android:layout_toRightOf="@id/labelLongitude"
        android:layout_toEndOf="@id/labelLongitude"
        android:layout_below="@id/RuleName"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelLatitude"
        android:text="@string/label_latitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/txtLatitude"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/txtLatitude"
        android:layout_below="@id/txtLongitude"
        android:layout_alignLeft="@id/txtLongitude"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelRadar"
        android:text="@string/label_range"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/txtRadar"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRadar"
        android:hint="Meter"
        android:layout_below="@id/txtLatitude"
        android:layout_toRightOf="@id/labelRadar"
        android:layout_alignLeft="@id/txtLatitude"
        android:inputType="number" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDescription"
        android:hint="@string/edit_description_hint"
        android:layout_below="@id/txtRadar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <!-- If have time, use custom SeekBar to replace this RadioGroup -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textRingMode"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtDescription"
        android:layout_marginTop="7dp"
        android:text="@string/ringmode"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ringmode"
        android:layout_below="@+id/textRingMode"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:checkedButton="@+id/vibrate"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vibrate"
            android:text="@string/vibrate"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/silence"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/slience"/>
    </RadioGroup>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Activited"
        android:layout_below="@id/ringmode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
